@@ -1957,6 +1957,7 @@
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                            <arg>--enable-preview</arg>
                             <arg>-parameters</arg>
                         </compilerArgs>
                         <annotationProcessorPaths>
